# BenchhubPlus

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.reflex  Dockerfile.worker  README.md  TODO.md  benchhub_plus_spec.md  docker-compose.dev.yml  docker-compose.reflex.yml  docker-compose.yml  init.sql  nginx.conf  nginx.reflex.conf  pyproject.toml  test.db
apps/: __init__.py
apps/backend/: dependencies.py  main.py  seeding.py
apps/backend/repositories/: leaderboard_repo.py  tasks_repo.py
apps/backend/routes/: auth.py  hret.py  leaderboard.py  manager.py  status.py
apps/backend/services/: audit.py  orchestrator.py
apps/core/: __init__.py  categories.py  config.py  credential_service.py  db.py  models.py  schemas.py  security.py  stats.py
apps/core/plan/: planner.py
apps/evaluation/: engine.py
apps/frontend/: streamlit_app.py
apps/frontend/components/: charts.py  forms.py
apps/reflex_frontend/: rxconfig.py
apps/reflex_frontend/assets/: styles.css
apps/reflex_frontend/reflex_frontend/: reflex_frontend.py
apps/worker/: __init__.py  celery_app.py  hret_config.py  hret_mapper.py  hret_runner.py  hret_storage.py  tasks.py
apps/worker/configs/: example_plan.yaml  hret_config_test-model.yaml  hret_default.yaml
docs/: HRET_INTEGRATION.md  README.md  SETUP_GUIDE.md  development.md  docker-deployment.md  quickstart.md
docs/eng/: BENCHHUB_CONFIG.md  EXECUTION_LOG.md  HRET_INTEGRATION.md  README.md  SETUP_GUIDE.md  api-reference.md  architecture.md  development.md  docker-deployment.md  installation.md  quickstart.md  reflex-migration.md  troubleshooting.md  user-manual.md
docs/kor/: BENCHHUB_CONFIG.md  EXECUTION_LOG.md  HRET_INTEGRATION.md  README.md  SETUP_GUIDE.md  api-reference.md  architecture.md  development.md  docker-deployment.md  installation.md  quickstart.md  reflex-migration.md  troubleshooting.md  user-manual.md
scripts/: deploy.sh  install_hret.sh  setup.sh  test.sh  test_full_integration.py  test_hret_api.py  test_hret_integration.py  test_hret_mapping.py
seeds/: seed_data.parquet
tests/: __init__.py  conftest.py
tests/e2e/: test_evaluation_flow.py
tests/fixtures/: sample_data.py
tests/integration/: test_api.py  test_seeding_integration.py
tests/unit/: test_cleanup_api.py  test_credential_service.py  test_manager_repositories.py  test_models.py  test_orchestrator_async.py  test_seeding.py  test_services.py
